# BlackBox

./: .mcp.json  CHANGELOG.md  README.md  cliff.toml  render.yaml  vercel.json
.claude/skills/debug-tauri/: SKILL.md
.claude/skills/indexeddb-offline/: SKILL.md
.claude/skills/karpathy-guideline/: SKILL.md
.claude/skills/plan-mode/: SKILL.md
.claude/skills/react-performance/: SKILL.md
.claude/skills/systematic-debug/: SKILL.md
.claude/skills/video-streaming/: SKILL.md
.factory/docs/: 2026-05-21-multi-connection-bandwidth-breakthrough.md  2026-05-21-progressive-chunk-sizing-for-bandwidth-saturation.md  2026-05-24-channel-folder-sync-reconciliation-system-improvement-plan.md  2026-05-24-channel-folder-system-improvement-full-reconciliation-sync-stale-channel-handlin.md
.factory/skills/brainstorming/: SKILL.md
.factory/skills/first-principles/: SKILL.md
.factory/skills/implement-clean/: SKILL.md
.factory/skills/qa/: .install-progress.yaml  SKILL.md  config.yaml
.factory/skills/qa-app/: SKILL.md
.factory/skills/tauri-rust/: SKILL.md
.github/workflows/: main.yml  qa.yml  release.yml
app/: index.html  package-lock.json  package.json
app/src/: App.css  App.tsx  types.ts  utils.ts
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
backend/: Cargo.toml  README.md
backend/src/: main.rs
docs/parallel-downloads/: README.md  download-pool-architecture.md  download-pool-bugs-and-lessons.md  telegram-tos-compliance.md
docs/plans/: 2026-05-18-stream-cache-download.md
docs/supabase/: channel_file_cache.sql  web_mode_settings.sql
(+117 files in other folders)
