[package]
name = "blackbox-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
rand = "0.8"
sha2 = "0.10"
grammers-client = { git = "https://github.com/Lonami/grammers", rev = "d07f96f" }
grammers-session = { git = "https://github.com/Lonami/grammers", rev = "d07f96f" }
grammers-mtsender = { git = "https://github.com/Lonami/grammers", rev = "d07f96f" }
grammers-tl-types = { git = "https://github.com/Lonami/grammers", rev = "d07f96f" }
